	* apps/nshlib/nsh_parse.c:  Loosen up if-then-else-fi syntax to allow
	  a command to be on the same line as the then and else tokens like:
	  "if true; then echo true; else echo false; fi".  Much more like bash!
	  (2014-1-17).
	* apps/nshlib/Kconfig, README.txt, nsh.h, nsh_command.c, and
	  nsh_script.c:  Add an option to conditionally compile out support for
	  loop and for if-then-else-fi sequence (2014-1-17).  
	* apps/nshlib/nsh.h, nsh_command.c, and nsh_parse.c:  Add a break
	  command that can be executed with a loop to terminate the loop
	  immediately (2014-1-17).
	* apps/system/vi:  Add support for a tiny, VI work-alike editor.  This
	  is still very much a work-in-progress on initial check-in (2014-1-20).
	* apps/netutils/uiplib:  Support new definitions and state passing for
	  network device status. From Maz Holtzberg (2014-1-21).
	* apps/system/vi:  Tiny VI is basically functional.  All commands seem
	  to work.  There are still some display artifacts and probably several
	  untested conditions (2014-1-21).

6.34 2014-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/system/cle:  Add a EMACS-like command line editor.  This CLE,
	  is really more like readline than the NuttX readline is!  (2014-02-02).
	* apps/nshlib: Use of the standard tiney readline (about .25KB) is now
	  an option and can be replaces with the EMACX-like CLE (about 2KB)
	  (2014-02-02).
	* Several changes to restore Windows native build (2014-2-7)
	* apps/examples/touchscreen:  Can now be configured to work with a mouse
	  interface as well (2014-2-10).
	* Several files changes based on complaints from the tool CppCheck.  Some
	  latent bugs were fixed (and most likely some new typos were introduced)
	  (2014-2-10).
	* apps/examples/nximage/Kconfig and apps/examples/uip/Kconfig: Incomplete
	  Kconfig files fleshed out by Alan Carvalho de Assis (2014-2-18).
	* apps/nshlib: 'rmdir' can now be used in the pseudo-filesystem.  Hence,